@@ -1,3 +1,8 @@
+2007-03-18  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	* gameswf/gameswf_sprite.cpp: fixed hitTest(),
+	It was necessary to use get_world_matrix() to find screen coordinates
+
 2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	* gameswf/gameswf_sprite.(cpp,h),
